contact icons and correct alignment

--- a/public/assets/styles/contact.css
+++ b/public/assets/styles/contact.css
@@ -1,15 +1,19 @@
 .contact-container {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; /* Center both sections vertically */
   height: 100vh;
   color: white;
+  gap: 20px; /* Add some gap between the form and social media sections */
 }
 
 .form-container,
 .social-media-container {
   width: 40%;
   margin: 0 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* Center content vertically within each container */
 }
 
 .contact-form {
@@ -17,7 +21,8 @@
   flex-direction: column;
 }
 
-.contact-form h2 {
+.contact-form h2,
+.social-media-links h2 {
   text-align: center;
 }
 
@@ -37,43 +42,46 @@
 }
 
 .contact-form button {
-  padding: 10px;
-  background-color: #444;
-  border: none;
-  border-radius: 5px;
-  color: white;
-  cursor: pointer;
-  transition: background-color 0.3s;
+  background-color: #fff3f331; /* Light yellow with some transparency */
+  text-decoration: none;
+  width: 250px; /* Width of the button */
+  height: 50px; /* Height of the button */
+  border: 4px solid #A07CFF; /* Light purple */
+  color: #fff; /* Text color */
+  font-size: 20px; /* Font size */
+  transition: background-color 0.3s ease, transform 0.3s ease;
+  font-family: VCR_OSD_MONO_1, sans-serif;
+  align-items: center;
 }
 
 .contact-form button:hover {
-  background-color: #666;
+  background-color: #fff3f360;
+  border: 2px solid #895ffc;
+  transform: scale(1.1);
 }
 
 .social-media-links {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
   text-align: center;
 }
 
 .social-media-links h2 {
+  width: 100%;
   margin-bottom: 20px;
 }
 
 .social-media-links a {
-  margin: 0 10px;
-  color: white;
+  margin: 10px;
+  color: #fff3f360;
   font-size: 2em;
-  transition: transform 0.3s;
+  width: calc(25% - 50px); /* 4 icons per row with 20px gap */
+  text-align: center;
 }
 
 .social-media-links a:hover {
   transform: scale(1.2);
-  color: #1da1f2; /* Twitter Blue */
-}
-
-.social-media-links a:nth-child(2):hover {
-  color: #0077b5; /* LinkedIn Blue */
-}
-
-.social-media-links a:nth-child(3):hover {
-  color: #333; /* GitHub Black */
+  color: #895ffc;
 }
